k8s/system/traefik/dashboard-ingress-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-secure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.remini.site`)
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`traefik.remini.site`) && PathPrefix(`/api`)
      services:
        - name: api@internal
          kind: TraefikService
